added some example of mongodb and organized workshop directories

--- a/03dbms/public/detail.html
+++ b/03dbms/public/detail.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 <h1>Board Detail</h1>
-<a href="/edit/<%=item.id%>">EDIT</a>
-<a href="/delete/<%=item.id%>">DELETE</a>
+<a href="/edit/<%=item._id%>">EDIT</a>
+<a href="/delete/<%=item._id%>">DELETE</a>
 <hr/>
 <table border="1" width="100%">
-	<tr><td width="30%">ID</td><td><%=item.id%></td></tr>
+	<tr><td width="30%">ID</td><td><%=item._id%></td></tr>
 	<tr><td>Title</td><td><%=item.title%></td></tr>
 	<tr><td colspan="2">Content</td></tr>
 	<tr><td colspan="2"><%=item.content%></td></tr>
